--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <p><a href="https://github.com/yopssy/colisee/blob/main/le%20colisee%20oc2.pdf">Visionner Notre Flyer pour plus d'info</a></p>
+  <p><a href="le colisee oc2.pdf">Visionner Notre Flyer pour plus d'info</a></p>
   </html>
